primer commit desde cero

--- a/texto/texto.html
+++ b/texto/texto.html
@@ -253,6 +253,8 @@
         .footer-legal-text--rtl {
             /* PRUEBA: direction */
             /* PRUEBA: text-align */
+            direction: ltr;
+            writing-mode: vertical-lr;
         }
 
         .vertical-text-block {
