--- a/texto/white-space.html
+++ b/texto/white-space.html
@@ -16,6 +16,10 @@
             font-size: clamp(2rem,6dvw,4.5rem);
         }
 
+        .parrafo-saltos {
+            white-space: ;
+        }
+
 
     </style>
 </head>
