--- a/texto/texto.html
+++ b/texto/texto.html
@@ -295,6 +295,15 @@
             opacity: 0.8;
         }
 
+        .align-vertical{
+            vertical-align: top;
+            font-size: 3rem;
+        }
+
+        .caja-demo img{
+            vertical-align: top;
+        }
+
     </style>
 </head>
 <body>
@@ -319,6 +328,20 @@
     <main class="main">
         <section id="introduccion" class="section section--introduction">
             <h2 class="section__title">Introducción: El Panorama Digital de 2025</h2>
+
+            <p>soy un texto bla bla <span class="align-vertical">Hola</span>  </p>
+
+            <div class="caja-demo">
+                <img  wigth="300" src="../imagenes/gesto-1.jpg"
+                 alt="">
+                 <span>Pablo pepe</span>
+
+                <img  wigth="150" src="../imagenes/gesto-2.jpg" alt="">
+                <img  wigth="100" src="../imagenes/gesto-3.jpg" alt="">
+
+
+            </div>
+
             <div class="content-area--main-article">
                 <p class="content-area__paragraph">El año 2025 marca un punto de inflexión significativo en la evolución tecnológica. La convergencia de diversas disciplinas ha impulsado <strong>innovaciones</strong> que están redefiniendo industrias enteras y transformando la vida cotidiana. Este informe examina las <strong>tendencias más impactantes</strong> que moldearán el paisaje tecnológico en los próximos doce meses.</p>
                 <p class="content-area__paragraph">Desde la inteligencia artificial hasta la computación cuántica y la creciente necesidad de soluciones sostenibles, el ritmo del cambio es vertiginoso. Comprender estas dinámicas es crucial para empresas, gobiernos y la sociedad en general para navegar con éxito en esta era de transformación digital.</p>
